# essais_codex

./: .gitignore  AGENTS.md  Makefile  README.md  classes_workflow_certif.puml  init_codex_project.sh  main.py  objectifs.yaml  pyproject.toml  requirements.txt  workflow_certif.yaml  workflow_certif_complet.puml
audit/: impact_retours.csv
config/: objectifs.yaml
core/: __init__.py  certification_dossier.py  objectifs.py  workflow_engine.py
core/etapes/: __init__.py  check_exigences.py  check_mop.py  check_preuves.py  gerer_retours.py  soumettre_dossier.py
data/: exigences.xlsx  mop.xlsx  preuves.xlsx  retours.xlsx
scripts/: __init__.py  analyse_impact_retours.py  analyse_retours.py  check_exigences.py  check_mop.py  check_preuves.py  gen_matrice_finale.py  gerer_retours.py  soumettre_dossier.py  synthese_retours.py  utils.py
src/workflow_certif/: __init__.py  engine.py  models.py  steps.py
tests/: test_analyse_retours.py  test_cli.py  test_engine.py  test_engine_classes.py  test_entrypoint.py  test_main.py  test_models.py  test_objectifs.py  test_scripts.py  test_synthese_retours.py  test_workflow.py
uml/: workflow_certif.puml
workflow/: __init__.py  engine.py  logger.py  models.py  reporting.py  steps.py
